nice-select: fix vertical-align

--- a/html/jquery/css/jquery-plugins.css
+++ b/html/jquery/css/jquery-plugins.css
@@ -317,6 +317,7 @@ fieldset.ui-fieldset.collapsed legend::before {
 	-moz-user-select: none;
 	-ms-user-select: none;
 	user-select: none;
+	vertical-align: middle;
 	white-space: nowrap;
 	width: auto;
 }
