--- a/html/jquery/css/jquery.ui.nice-select.css
+++ b/html/jquery/css/jquery.ui.nice-select.css
@@ -22,6 +22,7 @@
 	-moz-user-select: none;
 	-ms-user-select: none;
 	user-select: none;
+	vertical-align: middle;
 	white-space: nowrap;
 	width: auto;
 }
